# knatrive-broker-cloudevents-offset

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  services.yaml
bar/: Cargo.toml
bar/src/: main.rs
foo/: Cargo.toml
foo/src/: main.rs
