[package]
name = "bar"
version = "0.1.0"
edition = "2018"

[dependencies.openssl]
version = "0.10.30"
features = [
    "vendored"
]

[dependencies.reqwest]
version = "0.10.4"
default-features = false
features = ["rustls-tls", "json"]

[dependencies]
cloudevents-sdk = "0.3.0"
cloudevents-sdk-actix-web = "0.3.0"
cloudevents-sdk-reqwest = "0.3.0"
http = "0.2.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version="=1.0.118", features = ["derive"] }
serde_json = "1.0.56"
actix-web = { version = "^3"}
actix-rt = "1"
actix-cors = "^0.5"
chrono = "0.4.19"
dotenv = "0.15.0"
envy = "0.4.2"
env_logger = "0.8.4"
log = "0.4.14"
